feat: colored clocks, header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
 <body class="debug">
 
 
+
+    <header>
+        <nav>
+            <div id="fixed-navbar">
+                <div class="right-navbar">
+                    <div class="logo">
+                    </div>
+                    <ul class="right-list">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                    </ul>
+                </div>
+                <div class="left-navbar">
+                    <ul class="left-list">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                    </ul>
+                    <div class="button"></div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
     <!-- header -->
 
         <!-- nav -->
