feat: navbar elements + styled

--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
                 <div class="right-navbar">
 
                     <!-- logo -->
-                    <div class="logo">
-                    </div>
+                    <div class="logo"> <a href=""><img src="img/logo-small.png" alt="dropboxlogo"></a></div>
 
                     <!-- lista link -->
                     <ul class="right-list">
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li><a href="//">Perché Dropbox</a> </li>
+                            <li><a href="//">Funzioni</a> </li>
+                            <li><a href="//">Piani e Prezzi</a> </li>
                     </ul>
                 </div>
 
@@ -40,13 +39,13 @@
 
                     <!-- lista link -->
                     <ul class="left-list">
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li><a href="//">Supporto</a> </li>
+                            <li><a href="//">Contatta l'ufficio vendite</a> </li>
+                            <li><a href="//">Accedi</a> </li>
                     </ul>
 
                     <!-- bottone -->
-                    <div class="button"></div>
+                    <button>Inizia</button>
                 </div>
             </div>
         </nav>
