feat: navbar + style

--- a/index.html
+++ b/index.html
@@ -12,9 +12,46 @@
 
     <title>Dropbox</title>
 </head>
-<body>
+
+<body class="debug">
     
         <!-- header -->
+
+        <header>
+            <nav>
+
+                <!-- navbar in 2 div -->
+                <div id="fixed-navbar">
+
+                    <!-- destra -->
+
+                    <div class="right">
+                        <div class="logo">
+                            <img src="img/logo-small.png" alt="drpboxlogo">
+                        </div>
+                        <ul class="list">
+                            <li><a class="gray" href="//">Perché Dropbox</a></li>
+                            <li><a class="gray" href="//">Funzioni</a></li>
+                            <li><a class="gray" href="//">Piani e Prezzi</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- sinistra -->
+
+                    <div class="left">
+                        <ul class="list">
+                            <li><a class="gray" href="//">Supporto</a> </li>
+                            <li><a class="gray" href="//">Contatta l'ufficio vendite</a> </li>
+                            <li><a class="gray" href="//">Accedi</a> </li>
+                        </ul>
+                        <button class="blue normalbtn">
+                            Inizia
+                        </button>
+                    </div>
+
+                </div>
+            </nav>
+        </header>
         <!-- nav -->
         <!-- fixed navbar -->
 
