feat: discover clients + style

--- a/index.html
+++ b/index.html
@@ -280,12 +280,101 @@
                     </div>
                 </div>
 
-                
+                <div class="title container">
+                    <h3>Esegui più operazioni con Dropbox</h3>
+                </div>
+
+                <!-- container carte -->
+
+                <div class="inner-cards container">
+
+                    <!-- card -->
+                    <div class="smallcard">
 
 
+                        <div class="smallimage">
+                            <img src="img/business-feature-switching-tools.png" alt="img1">
+                        </div>
+
+                        <div class="smalltext">
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+
+                    </div>
+                    <div class="smallcard">
 
 
+                        <div class="smallimage">
+                            <img src="img/business-feature-switching-tools.png" alt="img1">
+                        </div>
 
+                        <div class="smalltext">
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+
+                    </div>
+                    <div class="smallcard">
+
+
+                        <div class="smallimage">
+                            <img src="img/business-feature-switching-tools.png" alt="img1">
+                        </div>
+
+                        <div class="smalltext">
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+
+                    </div>
+                    <div class="smallcard">
+
+
+                        <div class="smallimage">
+                            <img src="img/business-feature-switching-tools.png" alt="img1">
+                        </div>
+
+                        <div class="smalltext">
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+
+                    </div>
+                    <div class="smallcard">
+
+
+                        <div class="smallimage">
+                            <img src="img/business-feature-switching-tools.png" alt="img1">
+                        </div>
+
+                        <div class="smalltext">
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+
+                    </div>
+                    <div class="smallcard">
+
+
+                        <div class="smallimage">
+                            <img src="img/business-feature-switching-tools.png" alt="img1">
+                        </div>
+
+                        <div class="smalltext">
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="clients">
+                    <h3>Più di 500.000 team usano Dropbox Business</h3>
+
+                    <div class="discover">
+                        <a href="//" class="blue-link">Scopri di più sui nostri clienti</a>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="logos large">
+                <div class=""></div>
             </div>
         </main>
        
