--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="featured-row side">
 
                         <div class="square" id="design">
-                            <img src="img/designit.svg" alt="logodesign">
+                            <img src="img/designit.svg" alt="designlogo">
                         </div>
                         <div class="square" id="asu">
                             <img src="img/arizona_state_university.svg" alt="logoasu">
@@ -405,6 +405,17 @@
                     </div>
 
                     <div class="featured-row center">
+
+                        <img src="img/designit.svg" alt="designlogo">
+
+                        <hr class="divisor">
+
+                        <p> "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.
+                        Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.
+                        </p>
+                        
+
+                        <span>Morten Thomsen, Global IT Lead</span>
 
                     </div>
                     
