feat: business button + style

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
             </div>
 
-            <div class="mainbox large">
+            <div class="featuredbox">
 
                 <div id="featured">
 
@@ -438,8 +438,24 @@
 
                 </div>
 
-                <div class="company container"></div>
+                <div id="companyrow">
+                    <div class="centered">
+                    <div id="company-inner">
 
+                        <h2 class="red">Porta Dropbox Business nella tua azienda.</h2>
+                        <div class="btn">
+                            <button class="normalbtn gray gbtn">Inizia la tua prova gratuita</button>
+                        </div>
+                        
+                    </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="centered">
+                <div class="faq container"></div>
             </div>
             
         </main>
