--- a/Correzione Prova/index.html
+++ b/Correzione Prova/index.html
@@ -86,6 +86,48 @@
         </nav>
 
         <!-- /nav -->
+
+        <!-- jumbotron -->
+
+        <div id="jumbotron">
+
+            <!-- contenitore centrale -->
+            <div class="jumboinner centered">
+                
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+
+                <!-- contenitore flexed-jumbo -->
+
+                <div id="flexed-jumbo">
+
+                    <!-- paragrafo -->
+                    <aside id="jumbo-text">
+
+                        <p class="text">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+
+                        <button id="jumbobtn" class="blue normalbtn">Inizia la prova gratuita</button>
+
+                        <div>Annulla in qualsiasi momento</div>
+
+                        <a class="icon" href="#business"><i class="fa-solid fa-arrow-down"></i></a>
+
+                    </aside>
+
+                    <!-- immagine che sborda -->
+                    <div id="jumbo-img">
+                        <img src="img/jumbo.png" alt="jumboimg">
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+
+        <!-- /jumbotron -->
+
+
+
     </header>
     
 </body>
